fixed font sizes

--- a/src/modules/dashboard/Users/components/index.scss
+++ b/src/modules/dashboard/Users/components/index.scss
@@ -46,7 +46,10 @@
 .pagination-wrapper{
   display: flex;
 align-items: center;
+margin: 0 1rem;
 gap: 1rem;
+
+
 }
 .pagination-wrapper button{
   background-color: transparent;
