--- a/src/pages/Users/components/index.scss
+++ b/src/pages/Users/components/index.scss
@@ -1,7 +1,4 @@
-.status-badge{
-  border-radius: 10rem;
-  padding: .4rem 1rem;
-}
+
 .user-table-wrapper{
   margin: 0 1rem;
   margin-top: 2rem;
@@ -86,6 +83,7 @@ gap: 1rem;
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
+  margin-top: 1rem;
   .pagination {
     font-weight: 400;
     color: rgba(84, 95, 125, 1);
