--- a/src/pages/Users/components/index.scss
+++ b/src/pages/Users/components/index.scss
@@ -45,7 +45,12 @@
 align-items: center;
 margin: 0 1rem;
 gap: 1rem;
-
+  @media only screen and (max-width: 600px) {
+        & {
+            
+             gap: .5rem;
+        }
+    }
 
 }
 .pagination-wrapper button{
@@ -104,6 +109,7 @@ gap: 1rem;
   margin-bottom: 6rem;
   @media only screen and (max-width: 600px) {
         & {
+            
               flex-direction: column-reverse;
         }
     }
