added row clicking to the table

--- a/src/pages/User/user.scss
+++ b/src/pages/User/user.scss
@@ -368,5 +368,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+             @media only screen and (max-width: 900px) {
+                            & {
+                              width: auto;
+                            }
+                        }
         }
         
