--- a/src/pages/User/user.scss
+++ b/src/pages/User/user.scss
@@ -281,13 +281,13 @@
             border: 1px solid rgba(33, 63, 125, 0.06);
             box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
             border-radius: 4px;
-            @media only screen and (min-width: 1500px) {
-                & {
-                    max-width: 100rem;
-                    display: grid;
-                    place-content: center;
-                }
-            }
+            // @media only screen and (min-width: 1500px) {
+            //     & {
+            //         max-width: 100rem;
+            //         display: grid;
+            //         place-content: center;
+            //     }
+            // }
             hr {
                 border: .06px solid #e8eaf1;
                 position: relative;
